--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mini-css-extract-plugin": "^2.9.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "neat-csv": "^7.0.0"
   }
 }
