--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mini-css-extract-plugin": "^2.9.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "bottleneck": "^2.19.5"
   }
 }
