--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.79.4",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
